# Android-ImGui-Vulkan-App

./: .gitignore  LICENSE  README.md  gradle.properties
.acside/editor/: openedFiles.json  openedFiles.json.bak
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/Neko/YouXi/: JniRoot.aidl
app/src/main/java/com/Neko/YouXi/: AppConfig.java  GlobalApplication.java  ImGuiSurfaceView.java  ImGuiTextureView.java  ImGuiViewService.java  JNI.java  KeyboardViewClass.java  KeyboardViewService.java  MainActivity.java  RecorderFakeUtils.java  Tools.java
app/src/main/java/com/Neko/YouXi/HotUpdate/: ClassLoaderHookHelper.java  NuomHttpUtil.java  ReflectionUtil.java
app/src/main/java/com/Neko/YouXi/Root/: ImGuiAidlService.java  ImGuiJNIRoot.java
app/src/main/java/com/Neko/YouXi/UI/: AboutFragment.java  HomeFragment.java  SettingsFragment.java
app/src/main/jni/: CMakeLists.txt  Includes.h  main.cpp  布局.cpp  音乐窗口.cpp
app/src/main/jni/curl/arm64-v8a/include/curl/: 证书.h
app/src/main/res/values/: strings.xml
